--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "keywords": [],
   "author": "vaexenc",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-plugin-jest": "^24.3.2",
+    "jest": "^26.6.3"
+  }
 }
