be more specific

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.eslintrc.json
-node_modules
-coverage
+/.eslintrc.json
+/node_modules/
+/coverage/
 
 # for now
-package-lock.json
+/package-lock.json
