--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "vaexenc",
   "license": "",
   "devDependencies": {
+    "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
     "eslint-plugin-jest": "^24.3.2",
-    "jest": "^26.6.3"
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.9",
+    "webpack": "^5.27.2",
+    "webpack-cli": "^4.5.0"
   }
 }
