--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "vaexenc",
   "license": "",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
     "eslint-plugin-jest": "^24.3.2",
