--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "vaexenc",
   "license": "",
+  "private": true,
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
