--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "webpack": "^5.27.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3"
   }
 }
