--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "webpack": "^5.27.2",
     "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
 }
