--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --verbose",
     "build": "webpack --config ./webpack.prod.js",
-    "build:dev": "webpack --config ./webpack.dev.js"
+    "build:dev": "webpack --config ./webpack.dev.js",
+    "dev": "webpack serve --config ./webpack.dev.js"
   },
   "keywords": [],
   "author": "vaexenc",
