--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
+    "css-minimizer-webpack-plugin": "^2.0.0",
     "eslint": "^7.22.0",
     "eslint-plugin-jest": "^24.3.2",
     "html-webpack-plugin": "^5.3.1",
