--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   "author": "vaexenc",
   "license": "",
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-jest": "^24.3.2",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "val-loader": "^3.1.0",
     "webpack": "^5.27.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-plugin-jest": "^24.3.2",
+    "jest": "^26.6.3",
+    "webpack-dev-server": "^3.11.2"
   }
 }
