--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "hololive-fusion-generator",
-  "version": "0.0.0",
-  "description": "",
-  "main": "",
   "scripts": {
     "test": "jest --verbose",
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
     "dev": "webpack serve --config ./webpack.dev.js --host 0.0.0.0"
   },
-  "keywords": [],
-  "author": "vaexenc",
-  "license": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vaexenc/hololive-fusion-generator.git"
+  },
   "private": true,
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
