--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "test": "jest --verbose",
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
-    "dev": "webpack serve --config ./webpack.dev.js --host 0.0.0.0"
+    "dev": "webpack serve --config ./webpack.dev.js --host 0.0.0.0",
+    "deploy": "npm run build && gh-pages --dist ./dist --message a --no-history"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "css-minimizer-webpack-plugin": "^2.0.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "val-loader": "^3.1.0",
