--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
+    "no-darkreader": "^1.0.1",
     "val-loader": "^3.1.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
