--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "webpack --config ./webpack.prod.js",
         "build:dev": "webpack --config ./webpack.dev.js",
         "dev": "webpack serve --config ./webpack.dev.js --host 0.0.0.0",
-        "deploy": "npm run build && gh-pages --dist ./dist --message a --no-history"
+        "deploy": "npm run build && gh-pages --dist ./dist --message a --no-history --branch gsproduction727-gh-pages"
     },
     "repository": {
         "type": "git",
@@ -16,7 +16,6 @@
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.1.3",
         "css-minimizer-webpack-plugin": "^2.0.0",
-        "gh-pages": "^3.2.3",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.3.9",
         "val-loader": "^3.1.0",
@@ -27,6 +26,7 @@
     "devDependencies": {
         "eslint": "^7.22.0",
         "eslint-plugin-jest": "^24.3.2",
+        "gh-pages": "^3.2.3",
         "jest": "^26.6.3",
         "webpack-dev-server": "^4.7.4"
     }
