install html-inline-css-webpack-plugin and use it

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "gh-pages": "^3.2.3",
+    "html-inline-css-webpack-plugin": "^1.11.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
     "no-darkreader": "^1.0.1",
